test/resources/invalid/com/boothj5/jarchexample/configuration/service/ConfigurationService.java
package com.boothj5.jarchexample.configuration.service;

import java.util.List;

import com.boothj5.jarchexample.common.*;
import com.boothj5.jarchexample.configuration.repository.ConfigurationRepository;
import com.boothj5.jarchexample.application.common.StringUtil;
import com.boothj5.jarchexample.domain.Person;
import com.boothj5.jarchexample.dto.PersonDTO;
